20150607 pokefinder/pokemem.c: recognise that libspectrum memory alloation never
         fails (Fred).
20150607 pokefinder/pokemem.c: change functions that cannot fail to return type
         void and make local functions static (Fred).
20150607 ui/scaler/Makefile.am,z80/Makefile.am: use AM_V_CC verbosity for custom
         built sources (thanks, Stuart) (Sergio).
20150613 m4/ax_create_stdint_h.m4: Add AX_CREATE_STDINT_H macro from the GNU
         Autoconf Archive (Stuart).
20150613 peripherals/specdrum.h: remove unused specdrum_present member of
         specdrum_info (Fred).
20150614 Makefile.am,compat,compat/{Makefile.am,amiga,linux,morphos,unix,wii,
         win32},configure.ac,data,data/Makefile.am,debugger,
         debugger/{Makefile.am,commandl.l,commandy.y},hacking,
         hacking/Makefile.am,keysyms.pl,lib,lib/Makefile.am,machines,
         machines/Makefile.am,man,man/Makefile.am,menu_data.pl,peripherals,
         peripherals/{Makefile.am,disk,disk/Makefile.am,flash,
         flash/Makefile.am,ide,ide/Makefile.am,nic,nic/Makefile.am},perl,
         perl/{Fuse,Fuse/Makefile.am,Makefile.am},pokefinder,
         pokefinder/Makefile.am,roms,roms/Makefile.am,sound,sound/Makefile.am,
         timer,timer/Makefile.am,ui,ui/{Makefile.am,fb,fb/Makefile.am,gtk,
         gtk/{Makefile.am,options.pl},scaler,scaler/Makefile.am,sdl,
         sdl/Makefile.am,svga,svga/Makefile.am,widget,widget/{Makefile.am,
         widget.c},wii,wii/Makefile.am,win32,win32/{Makefile.am,icons,
         icons/Makefile.am,options.pl,win32ui.c},xlib,xlib/{Makefile.am,
         xdisplay.c}},unittests,unittests/Makefile.am,z80,
         z80/{Makefile.am,tests,tests/Makefile.am,z80_ops.c}: switch to using
         non-recursive makefile (patch #321) (thanks, Stuart) (Sergio).
20150617 Makefile.am,data/Makefile.am,ui/{fb,gtk,sdl,svga,widget,wii,win32,
         xlib}/Makefile.am,z80/Makefile.am: enable silent rules for perl and 
         windres commands (Sergio).